# 2022-CUMCM-C

./: .gitignore  README.md  pyproject.toml
data/raw/: manifest.json  problem.txt
docs/superpowers/plans/: 2026-07-11-project-data-foundation.md  2026-07-11-question1-categorical-association.md
docs/superpowers/specs/: 2026-07-11-project-data-foundation-design.md  2026-07-11-question1-categorical-association-design.md
notebooks/: 00_data_inspection.ipynb  01_model_simulation.ipynb  10_question1_weathering.ipynb
scripts/: prepare_data.py
src/cumcm2022c/: __init__.py
src/cumcm2022c/analysis/: __init__.py  categorical.py
src/cumcm2022c/data/: __init__.py  convert.py  load.py  validate.py
src/cumcm2022c/simulation/: __init__.py
src/cumcm2022c/visualization/: categorical.py
tests/: test_prepare_data.py
tests/analysis/: __init__.py  test_categorical.py
tests/data/: test_convert.py  test_load.py  test_validate.py
tests/visualization/: __init__.py  test_categorical.py
