[project]
name = "cumcm2022c"
version = "0.1.0"
description = "Reproducible data processing and simulation for 2022 CUMCM Problem C"
readme = "README.md"
authors = [
    { name = "PhSeCl", email = "3622848623@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pandera>=0.32.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
